fix z-index level

--- a/Client/GUI/GUI.less
+++ b/Client/GUI/GUI.less
@@ -3,7 +3,7 @@
    width: 100%;
    height: 100%;
    position: fixed;
-   z-index: 2;
+   z-index: 1;
    display: grid;
    grid-template-areas: 'leftTopCorner centerTopCorner rightTopCorner' 'leftCenterCorner centerCenterCorner rightCenterCorner' 'leftDownCorner centerDownCorner RightDownCorner';
    grid-template-rows: 5fr 10fr 5fr;
