--- a/Client/StickController/StickController.less
+++ b/Client/StickController/StickController.less
@@ -1,7 +1,7 @@
 .Sticks {
   display: none;
   justify-content: space-between;
-  z-index: 1;
+  z-index: 2;
   position: absolute;
   bottom: 30%;
   width: 100%;
